Fixed next events on mobile

--- a/stylesheets/he-mobile.css
+++ b/stylesheets/he-mobile.css
@@ -838,8 +838,9 @@ article.last-event {
 
   .next-event {
       float: left;
-      margin-left: 5%;
-      width: 35%;
+      width: 100%;
+      margin-left: 0;
+      margin-top: 20px;
       background: none;
   }
 
